# skillful_nowcasting

./: .gitignore  create_dummy_zarr.py  plot_sequences.py  pyproject.toml  test_dgmr.py
config/: config_utils.py  debug.yml  default.yml  production.yml
data/: zarr_dataset.py
dgmr/: dgmr.py
train/: run.py
